<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeFragment">

    <Button
        android:id="@+id/kecepatanButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/hitung_kecepatan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/kecepatanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/balokButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/balok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kecepatanButton" />
</androidx.constraintlayout.widget.ConstraintLayout>