<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/homeFragment">
    <fragment
        android:id="@+id/homeFragment"
        android:name="org.d3if2041.hitungkecepatan.ui.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_homeFragment_to_kecepatanFragment4"
            app:destination="@id/kecepatanFragment4" />
        <action
            android:id="@+id/action_homeFragment_to_balokFragment"
            app:destination="@id/balokFragment" />
    </fragment>
    <fragment
        android:id="@+id/kecepatanFragment4"
        android:name="org.d3if2041.hitungkecepatan.ui.kecepatan.KecepatanFragment"
        android:label="@string/kecepatan_header"
        tools:layout="@layout/fragment_kecepatan" >
        <action
            android:id="@+id/action_kecepatanFragment4_to_historiKecepatanFragment"
            app:destination="@id/historiKecepatanFragment" />
    </fragment>
    <fragment
        android:id="@+id/balokFragment"
        android:name="org.d3if2041.hitungkecepatan.ui.balok.BalokFragment"
        android:label="@string/balok_header"
        tools:layout="@layout/fragment_balok" >
        <action
            android:id="@+id/action_balokFragment_to_historiBalokFragment"
            app:destination="@id/historiBalokFragment" />
    </fragment>
    <fragment
        android:id="@+id/historiKecepatanFragment"
        android:name="org.d3if2041.hitungkecepatan.ui.histori.HistoriKecepatanFragment"
        android:label="HistoriKecepatanFragment"
        tools:layout="@layout/fragment_histori_kecepatan"/>
    <fragment
        android:id="@+id/historiBalokFragment"
        android:name="org.d3if2041.hitungkecepatan.ui.histori.HistoriBalokFragment"
        android:label="HistoriBalokFragment"
        tools:layout="@layout/fragment_histori_balok"/>
</navigation>